--- a/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
+++ b/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# prettify method indents the html code, making it easier to read code within each tag\n",
-    "# commenting this line of code out because unable to hide the lengthy code blob on GitHub\n",
+    "# commenting this line of code out because don't know how to hide the lengthy code blob on GitHub\n",
     "## print(soup.prettify()) "
    ]
   },
@@ -15972,26 +15972,6 @@
     "toronto_merged = toronto_merged.join(neighborhoods_venues_sorted.set_index('Neighborhood'), on='Neighborhood')\n",
     "\n",
     "toronto_merged.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# toronto_merged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# removing the 1 row with several NaN values (so can map the other clusters)\n",
-    "# toronto_merged.dropna(subset=[\"Cluster Labels\"], axis=0, inplace=True)\n",
-    "## commenting out because no longer see this row anymore, so might not need this line of code!"
    ]
   },
   {
